Fixes ghosting, Still doesn't look amazing on small screens though!

--- a/src/styles/Canvas.css
+++ b/src/styles/Canvas.css
@@ -19,7 +19,7 @@ body {
 	/* width: 100%; */
 	/* height: 100%; */
 	max-width: 100%;
-	height: 100%;
+	max-height: 100%;
 }
 
 .drawingCanvas {
